--- a/FliplloCliente/InterfazGrafica/GUIPanelPostJuego.xaml
+++ b/FliplloCliente/InterfazGrafica/GUIPanelPostJuego.xaml
@@ -7,13 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="512" d:DesignWidth="512" Background="#FF03683A">
     <Grid>
-		<Label Content="MensajeDeVictoria" HorizontalAlignment="Left" Margin="43,48,0,0" VerticalAlignment="Top" FontSize="48"/>
+		<Label Name="LabelMensajeDeVictoria" Content="MensajeDeVictoria" HorizontalAlignment="Left" Margin="43,48,0,0" VerticalAlignment="Top" FontSize="48"/>
 		<Label Name="LabelNombreDeUsuarioOponente" Content="Oponente" HorizontalAlignment="Left" Margin="274,127,0,0" VerticalAlignment="Top" FontSize="24"/>
 		<Label Name="LabelMiNombreDeUsuario" Content="Yo" HorizontalAlignment="Left" Margin="43,127,0,0" VerticalAlignment="Top" FontSize="24"/>
 		<Label Name="LabelPuntuacionFinalMiColor" Content="{DynamicResource puntuacionFinal}" HorizontalAlignment="Left" Margin="43,169,0,0" VerticalAlignment="Top" FontSize="18"/>
 		<Label Name="LabelPuntuacionFinalColorDelOponente" Content="{DynamicResource puntuacionFinal}" HorizontalAlignment="Left" Margin="274,169,0,0" VerticalAlignment="Top" FontSize="18"/>
-		<Label Name="LabelPuntuacionFinalMia" Content="x" HorizontalAlignment="Left" Margin="146,169,0,0" VerticalAlignment="Top" FontSize="18" Width="109"/>
-		<Label Name="LabelPuntuacionFinalDelOponente" Content="x" HorizontalAlignment="Left" Margin="377,169,0,0" VerticalAlignment="Top" FontSize="18" Width="94"/>
+		<Label Name="LabelValorPuntuacionFinalMiColor" Content="x" HorizontalAlignment="Left" Margin="146,169,0,0" VerticalAlignment="Top" FontSize="18" Width="109"/>
+		<Label Name="LabelValorPuntuacionFinalColorDelOponente" Content="x" HorizontalAlignment="Left" Margin="377,169,0,0" VerticalAlignment="Top" FontSize="18" Width="94"/>
 		<Button x:Name="ButtonGG" Content="{DynamicResource ggHeart}" Margin="215,455,214,0" VerticalAlignment="Top" Click="ButtonGG_Click"/>
 		<Label x:Name="LabelEstadisticas" Content="{DynamicResource estadisticas}" HorizontalAlignment="Left" Margin="42,208,0,0" VerticalAlignment="Top" FontSize="24"/>
 		<Label x:Name="LabelPartidasJugadas" Content="{DynamicResource partidas}" HorizontalAlignment="Left" Margin="43,251,0,0" VerticalAlignment="Top" FontSize="18"/>
@@ -24,6 +24,6 @@
 		<Label x:Name="LabelValorDePorcentajeDeVictorias" Content="x" HorizontalAlignment="Left" Margin="126,301,0,0" VerticalAlignment="Top" FontSize="18" Width="109"/>
 		<TextBlock x:Name="TextBlockDesgloseDeExperiencia" Text="" HorizontalAlignment="Left" Margin="274,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="84" Width="175" FontSize="18"/>
 		<Label x:Name="LabelExperienciaGanada" Content="{DynamicResource experienciaObtenida}" HorizontalAlignment="Left" Margin="274,208,0,0" VerticalAlignment="Top" FontSize="24"/>
-		<local:ContadorDeNivel Margin="274,353,31,81"></local:ContadorDeNivel>
+		<local:ContadorDeNivel x:Name="ContadorDeNivel" Margin="255,344,35,90"></local:ContadorDeNivel>
 	</Grid>
 </UserControl>
