--- a/FliplloCliente/InterfazGrafica/GUICrearLobby.xaml
+++ b/FliplloCliente/InterfazGrafica/GUICrearLobby.xaml
@@ -1,20 +1,32 @@
 ﻿<Window x:Class="InterfazGrafica.GUICrearLobby"
+		Name="Ventana"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InterfazGrafica"
+		xmlns:logica="clr-namespace:LogicaDeNegocios.ServiciosDeFlipllo;assembly=LogicaDeNegocios"
         mc:Ignorable="d"
-        Title="{DynamicResource crearLobby}" Height="195.125" Width="211.812" Icon="RecursosGráficos/Icon.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="{DynamicResource VerdeFlipllo}">
+        Title="{DynamicResource crearLobby}"  RenderOptions.BitmapScalingMode="NearestNeighbor" Height="247.625" Width="212.812" Icon="RecursosGráficos/Icon.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="{DynamicResource VerdeFlipllo}">
 	<Grid>
 		<Label Content="{DynamicResource nombre}" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top"/>
 		<Label Content="{DynamicResource nivel}" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.986,0.481"/>
-		<Label Content="{DynamicResource minimo}" HorizontalAlignment="Left" Margin="104,77,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.25,-0.962"/>
-		<Label Content="{DynamicResource maximo}" HorizontalAlignment="Left" Margin="10,77,0,0" VerticalAlignment="Top"/>
-		<TextBox x:Name="TextBoxNivelMinimo" HorizontalAlignment="Left" Height="23" Margin="134,81,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="47"/>
-		<TextBox x:Name="TextBoxNivelMaximo" HorizontalAlignment="Left" Height="23" Margin="52,80,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="47"/>
+		<Label Content="{DynamicResource minimo}" HorizontalAlignment="Left" Margin="11,75,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.25,-0.962"/>
+		<Label Content="{DynamicResource maximo}" HorizontalAlignment="Left" Margin="92,76,0,0" VerticalAlignment="Top"/>
 		<TextBox x:Name="TextBoxNombreDeLobby" HorizontalAlignment="Left" Height="23" Margin="52,19,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="129"/>
-		<Button x:Name="ButtonCrearLobby"  Content="{DynamicResource crearLobby}" Margin="64,129,64,0" VerticalAlignment="Top" Click="ButtonCrearLobby_Click"/>
+		<TextBox x:Name="TextBoxNivelMaximo" HorizontalAlignment="Left" Height="24" Margin="134,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="47"/>
+		<TextBox x:Name="TextBoxNivelMinimo" HorizontalAlignment="Left" Height="23" Margin="41,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="46"/>
+		<Button x:Name="ButtonCrearLobby"  Content="{DynamicResource crearLobby}" Margin="66,189,0,0" VerticalAlignment="Top" Click="ButtonCrearLobby_Click" HorizontalAlignment="Left" Width="88"/>
 
+		<Button Visibility="Visible" x:Name="ButtonCambiarColorANegro" HorizontalAlignment="Left" Margin="117,115,0,0" VerticalAlignment="Top" Width="64" Height="64" Click="ButtonCambiarColorANegro_Click">
+			<Image Source="/RecursosGráficos/Default/Negro1.png">
+
+			</Image>
+		</Button>
+		<Button  Visibility="Visible" x:Name="ButtonCambiarColorABlanco" HorizontalAlignment="Left" Margin="18,115,0,0" VerticalAlignment="Top" Width="64" Height="64" Click="ButtonCambiarColorABlanco_Click">
+			<Image Source="/RecursosGráficos/Default/Blanco7.png">
+
+			</Image>
+		</Button>
 	</Grid>
 </Window>
